Implement API endpoints for task management - Added POST endpoint for creating tasks - Added PUT endpoint for updating tasks - Added DELETE endpoint for deleting tasks - Added GET endpoint for get tasks
